--- a/Website/style.css
+++ b/Website/style.css
@@ -10,7 +10,7 @@ body {
     margin: 0;
 }
 .navtop {
-    background-color: #3b4656;
+    background-color: #3b4656;   /*3d9b35*/
     height: 60px;
     width: 100%;
     border: 0;
