--- a/Website/form.css
+++ b/Website/form.css
@@ -12,7 +12,7 @@ input, select {
 
 input[type=submit] {
   width: 100%;
-  background-color: #4CAF50;
+  background-color: #3d9b35;
   color: white;
   padding: 14px 20px;
   margin-left: auto;
@@ -24,7 +24,9 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #3d9b35;        /*#45a049;8?
+  background-color: #f2f2f2;  /*#45a049;8?*/
+  border-radius: 4px;
+  border-color: #3d9b35;
 }
 
 div {
