--- a/Website/form.css
+++ b/Website/form.css
@@ -27,6 +27,8 @@ input[type=submit]:hover {
   background-color: #f2f2f2;  /*#45a049;8?*/
   border-radius: 4px;
   border-color: #3d9b35;
+  color: white;
+  padding: 14px 20px;
 }
 
 div {
