--- a/Website/form.css
+++ b/Website/form.css
@@ -24,11 +24,21 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #f2f2f2;  /*#45a049;8?*/
-  border-radius: 4px;
+ /* background-color: #f2f2f2;  /*#45a049;8?*/
+  /*border-radius: 4px;
   border-color: #3d9b35;
   color: white;
-  padding: 14px 20px;
+  padding: 14px 20px;*/
+
+  line-height: 1;
+      border-radius: 5px;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      -ms-appearance: none;
+      appearance: none;
+      white-space: nowrap;
+      height: 42px;
+      transition: all .2s ease;
 }
 
 div {
