--- a/Website/form.css
+++ b/Website/form.css
@@ -24,11 +24,42 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
- background-color: #f2f2f2;  /*#45a049;8?*/
-  border-radius: 4px;
-  border-color: #3d9b35;
+ /*background-color: #f2f2f2;  /*#45a049;8?*/
+ /* border-radius: 4px;
+ /* border-color: #3d9b35;
   color: white;
-  padding: 14px 20px;
+  padding: 14px 20px;*/
+  color: #fff;
+      background: #3d9b35;
+      display: inline-block;
+      text-align: center;
+      border: 2
+  px
+   solid transparent;
+      border-top-color: transparent;
+      border-top-style: solid;
+      border-top-width: 2
+  px
+  ;
+      border-right-color: transparent;
+      border-right-style: solid;
+      border-right-width: 2
+  px
+  ;
+      border-bottom-color: transparent;
+      border-bottom-style: solid;
+      border-bottom-width: 2px;
+      border-left-color: transparent;
+      border-left-style: solid;
+      border-left-width: 2px;
+      border-image-source: initial;
+      border-image-slice: initial;
+      border-image-width: initial;
+      border-image-outset: initial;
+      border-image-repeat: initial;
+      max-width: 100%;
+      padding: 11px 29px 10px;
+      overflow: hidden;
 
   line-height: 1;
       border-radius: 5px;
