--- a/Website/form.css
+++ b/Website/form.css
@@ -13,6 +13,7 @@ input, select {
 input[type=submit] {
   width: 100%;
   background-color: #3d9b35;
+  background-color: #f2f2f2;
   color: white;
   padding: 14px 20px;
   margin-left: auto;
@@ -25,21 +26,12 @@ input[type=submit] {
 
 input[type=submit]:hover {
  background-color: #f2f2f2;  /*#45a049;8?*/
- border-radius: 4px;
+
  border-color: #3d9b35;
-  color: white;
-  padding: 14px 20px;
 
 
-  line-height: 1;
-      border-radius: 5px;
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      -ms-appearance: none;
-      appearance: none;
-      white-space: nowrap;
-      height: 42px;
-      transition: all .2s ease;
+
+
 }
 
 div {
