--- a/Website/form.css
+++ b/Website/form.css
@@ -13,7 +13,7 @@ input, select {
 input[type=submit] {
   width: 100%;
   background-color: #3d9b35;
-  background-color: #f2f2f2;
+  border-color: #f2f2f2;
   color: white;
   padding: 14px 20px;
   margin-left: auto;
@@ -26,7 +26,7 @@ input[type=submit] {
 
 input[type=submit]:hover {
  background-color: #f2f2f2;  /*#45a049;8?*/
-
+ text-color: #000000;
  border-color: #3d9b35;
 
 
