Updated Button Color

--- a/Website/form.css
+++ b/Website/form.css
@@ -26,7 +26,7 @@ input[type=submit] {
 
 input[type=submit]:hover {
  background-color: #f2f2f2;  /*#45a049;8?*/
- text-color: #000000;
+ color: #000000;
  border-color: #3d9b35;
 
 
