--- a/Website/form.css
+++ b/Website/form.css
@@ -19,14 +19,13 @@ input[type=submit] {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  border: none;
   border-radius: 4px;
   cursor: pointer;
 }
 
 input[type=submit]:hover {
  background-color: #f2f2f2;  /*#45a049;8?*/
- color: #000000;
+ color: #3d9b35;
  border-color: #3d9b35;
 
 
