--- a/Website/form.css
+++ b/Website/form.css
@@ -15,11 +15,11 @@ input[type=submit] {
   background-color: #3d9b35;
   border-color: #f2f2f2;
   color: white;
-  padding: 14px 20px;
+  padding: 11px 29px 10px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  border-radius: 8px;
+  border-radius: 4px;
   cursor: pointer;
 }
 
