--- a/Website/form.css
+++ b/Website/form.css
@@ -15,7 +15,7 @@ input[type=submit] {
   background-color: #3d9b35;
   border-color: #f2f2f2;
   color: white;
-  padding: 11px 29px 10px;
+  padding: 21px 30px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
