--- a/Website/form.css
+++ b/Website/form.css
@@ -15,7 +15,8 @@ input[type=submit] {
   background-color: #3d9b35;
   border-color: #f2f2f2;
   color: white;
-  padding: 18px 25px;
+  padding: 14px 20px;
+  border-width: medium;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
