--- a/Website/form.css
+++ b/Website/form.css
@@ -17,6 +17,7 @@ input[type=submit] {
   color: white;
   padding: 14px 20px;
   border-width: medium;
+  size: 10px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
