Updated Button Color

--- a/Website/form.css
+++ b/Website/form.css
@@ -1,7 +1,10 @@
 input, select {
   width: 100%;
   padding: 12px 20px;
-  margin: 8px 0;  
+  border-color: #3d9b35;
+  border-width: medium;
+  border-radius: 4px;
+  margin: 8px 0;
   display: inline-block;
   margin-left: auto;
   margin-right: auto;
@@ -19,6 +22,7 @@ input[type=submit] {
   border-width: medium;
   font-size: 18px;
   font-weight: bold;
+  font-color: #3d9b35;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
