--- a/Website/form.css
+++ b/Website/form.css
@@ -23,9 +23,37 @@ input[type=text]{
   width: 100%;
   border-radius: 4px;
   cursor: pointer;
-
-
 }
+input[type=time]{
+ width: 100%;
+  background-color: #f2f2f2;
+  border-color: #3d9b35;
+  color: white;
+  padding: 14px 20px;
+  border-width: medium;
+  font-size: 18px;
+  font-color: #3d9b35;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  border-radius: 4px;
+  cursor: pointer;
+}
+input[type=date]{
+ width: 100%;
+  background-color: #f2f2f2;
+  border-color: #3d9b35;
+  color: white;
+  padding: 14px 20px;
+  border-width: medium;
+  font-size: 18px;
+  font-color: #3d9b35;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  border-radius: 4px;
+  cursor: pointer;
+  }
 input[type=submit] {
   width: 100%;
   background-color: #3d9b35;
