--- a/Website/form.css
+++ b/Website/form.css
@@ -46,8 +46,8 @@ input[type=date]{
   color: white;
   padding: 14px 20px;
   border-width: medium;
-  date-size: 18px;
-  date-color: #3b4656 ;
+  font-size: 18px;
+  font-color: #3b4656 ;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
@@ -66,7 +66,7 @@ input[type=submit] {
   font-color: #3d9b35;
   margin-left: auto;
   margin-right: auto;
-  width: 100%;
+  width: 25%;
   border-radius: 4px;
   cursor: pointer;
 }
