--- a/Website/form.css
+++ b/Website/form.css
@@ -64,8 +64,8 @@ input[type=submit] {
   font-size: 18px;
   font-weight: bold;
   font-color: #3d9b35;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: center;
+  margin-right: center;
   width: 25%;
   border-radius: 4px;
   cursor: pointer;
