--- a/Website/form.css
+++ b/Website/form.css
@@ -55,7 +55,7 @@ input[type=date]{
   cursor: pointer;
   }
 input[type=submit] {
-  width: 100%;
+  width: 25%;
   background-color: #3d9b35;
   border-color: #f2f2f2;
   color: white;
@@ -64,8 +64,8 @@ input[type=submit] {
   font-size: 18px;
   font-weight: bold;
   font-color: #3d9b35;
-  margin-left: center;
-  margin-right: center;
+  margin-left: auto;
+  margin-right: auto;
   width: 25%;
   border-radius: 4px;
   cursor: pointer;
