--- a/Website/form.css
+++ b/Website/form.css
@@ -6,7 +6,7 @@ input, select {
   margin-left: auto;
   margin-right: auto;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 25px;
   box-sizing: border-box;
 }
 input[type=text]{
@@ -21,7 +21,7 @@ input[type=text]{
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  border-radius: 4px;
+  border-radius: 25px;
   cursor: pointer;
 }
 input[type=time]{
@@ -36,7 +36,7 @@ input[type=time]{
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  border-radius: 4px;
+  border-radius: 25px;
   cursor: pointer;
 }
 input[type=date]{
@@ -51,14 +51,14 @@ input[type=date]{
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  border-radius: 4px;
+  border-radius: 25px;
   cursor: pointer;
   }
 input[type=submit] {
   width: 25%;
   background-color: #3d9b35;
-  border-color: #f2f2f2;
-  color: white;
+  border-color: #3b4656;
+  color: black;
   padding: 14px 20px;
   border-width: medium;
   font-size: 18px;
@@ -67,7 +67,7 @@ input[type=submit] {
   margin-left: auto;
   margin-right: auto;
   width: 25%;
-  border-radius: 4px;
+  border-radius: 25px;
   cursor: pointer;
 }
 
