--- a/Website/form.css
+++ b/Website/form.css
@@ -13,7 +13,7 @@ input[type=text]{
  width: 100%;
   background-color: #f2f2f2;
   border-color: #3d9b35;
-  color: white;
+  color: green;
   padding: 14px 20px;
   border-width: medium;
   font-size: 18px;
@@ -28,7 +28,7 @@ input[type=time]{
  width: 100%;
   background-color: #f2f2f2;
   border-color: #3d9b35;
-  color: white;
+  color: green;
   padding: 14px 20px;
   border-width: medium;
   font-size: 18px;
@@ -43,7 +43,7 @@ input[type=date]{
  width: 100%;
   background-color: #f2f2f2;
   border-color: #3d9b35;
-  color: white;
+  color: green;
   padding: 14px 20px;
   border-width: medium;
   font-size: 18px;
@@ -57,8 +57,8 @@ input[type=date]{
 input[type=submit] {
   width: 25%;
   background-color: #3d9b35;
-  border-color: #3b4656;
-  color: black;
+  border-color: #f2f2f2;
+  color: white;
   padding: 14px 20px;
   border-width: medium;
   font-size: 18px;
