--- a/Website/form.css
+++ b/Website/form.css
@@ -17,7 +17,7 @@ input[type=text]{
   padding: 14px 20px;
   border-width: medium;
   font-size: 18px;
-
+ font-color: #3b4656 ;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
